# pytop

./: .coverage  .gitignore  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUsersKadirhanAppDataLocalTempcov_report.txt  DEPRECATIONS.md  README.md  SESSION_SUMMARY_2026_06_23.md  TERMINOLOGY_GUIDE.md  conftest.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
_scripts/: run_p16_2_oracle_agreement.py  run_p16_3_statistical_validation.py
docs/: API_DESIGN.md  CAPABILITIES_AND_ROADMAP.md  COMPLEXITY.md  GETTING_STARTED.md  GOOD_FIRST_ISSUES.md  P17_2_ALGORITHM_OPTIMIZATION.md  P17_3_PARALLEL_SCALING.md  P19_API_STABILITY.md  P20_RELEASE_READINESS.md  PERFORMANCE.md  PROFILING.md  VALIDATION.md
docs/api/: conf.py  index.rst
docs/user_guide/: README.md
docs/validation/: oracle_matrix.json  oracle_matrix.md
examples_bank/: README.md  adams_franzosa_pilot_examples.md  advanced_directions_research_paths_examples.md  applied_topology_intro_examples.md  basic_cardinal_functions_examples.md  basic_invariants_examples.md  book_source_usage_notes.md  cardinal_functions_framework_examples.md  cardinal_number_examples.md  cell_complexes_examples.md  chemical_graph_theory_examples.md  classical_cardinal_inequalities_examples.md  cofinality_regularity_examples.md  compactification_examples.md  compactness_cardinal_functions_examples.md  compactness_examples.md  compactness_variants_examples.md  complete_metric_examples.md  computable_spaces_examples.md  configuration_phase_space_examples.md  connectedness_examples.md  construction_bridge_examples.md  continua_examples.md  continuity_map_taxonomy.md  convergence_examples.md  convergence_spaces_examples.md  cosmology_topology_examples.md  countability_examples.md  counterexamples.md  covering_space_examples.md  degree_theory_applications_examples.md  digital_image_topology_examples.md  dimension_theory_examples.py  dynamical_systems_examples.md  euclidean_topology_examples.md  finite_spaces_catalog.md  function_space_examples.md  fundamental_group_examples.md  geometric_computation_examples.md  geometric_foundations_examples.md  (+52 more)
examples_bank/advanced_algebra/: 01_group_presentation_torus.md  02_higher_homotopy_eilenberg_maclane.md  03_sheaf_cohomology.md
examples_bank/cardinal_functions/: 01_cardinal_invariants.py  02_ordinal_numbers.md  03_compactness_cardinal_bounds.md
examples_bank/combinatorial_topology/: 01_simplicial_maps.md  02_cone_suspension.md  03_nerve_theorem.md  04_discrete_morse_gradient.md  05_spectral_sequence_homology.md
examples_bank/graph_topology/: 01_graph_planarity_test.py  02_graph_genus.md  03_covering_maps_graph.md  04_complete_bipartite_properties.md
examples_bank/homology/: 01_simplicial_homology_sphere.py  02_persistent_homology_circle.py  03_cellular_homology_torus.md  04_mayer_vietoris_wedge_circles.md  05_relative_homology_pair.md  06_cohomology_cup_product.md
examples_bank/knot_theory/: 01_trefoil_alexander_polynomial.py  03_alexander_polynomial_unknot.md  04_khovanov_homology_trefoil.md  05_concordance_invariants.md  06_satellite_knots.md
examples_bank/manifolds_surfaces/: 01_klein_bottle_homology.py  02_projective_plane_homology.md  03_surface_word_classification.md  04_three_manifold_invariants.md  05_dehn_surgery.md
examples_bank/tda_pipelines/: 01_rips_tda_pipeline.py  02_auto_router.py  02_cech_complex_pipeline.md  03_persistence_bottleneck_distance.md  04_mapper_algorithm.md  05_landscape_entropy.md
formal/: Formal.lean  README.md  ROADMAP.md  lakefile.toml
formal/Formal/: CohomologyRing.lean  EulerChar.lean  Homology.lean  MayerVietoris.lean  MetricTopology.lean  PersHomology.lean  PersistencePairing.lean  PiBase.lean  SNF.lean  SetTopology.lean  SetTopologyAltProofs.lean  SpectralSequences.lean  VanKampen.lean
formal/tools/: bilingual_docs.py
notebooks/: README.md  compactness.ipynb  connectedness.ipynb  covering_spaces.ipynb  degree_theory.ipynb  dimension_theory.ipynb  dynamical_systems.ipynb  filters_and_nets.ipynb  fixed_point.ipynb  graph_topology.ipynb  higher_categories.ipynb  homotopy.ipynb  knots.ipynb  logic_and_sets.ipynb  manifolds.ipynb  maps.ipynb  metric_spaces.ipynb  motivic_homotopy.ipynb  operads.ipynb  persistent_homology.ipynb  predicate_math.ipynb  random_generators.ipynb  relations_and_orders.ipynb  separation.ipynb  spaces_and_predicates.ipynb  spectral_sequences.ipynb  surfaces.ipynb  symplectic_topology.ipynb
src/pytop/: __init__.py  __main__.py  _deprecation.py  _finite_utils.py  _gpu_backend.py  _infinite_helpers.py  abstract_homotopy.py  advanced_compactifications.py  alexandroff.py  archive_bundle_checker.py  baire_category.py  bases.py  basic_invariants.py  borel_measures.py  capabilities.py  cardinal_function_examples.py  cardinal_function_profiles.py  cardinal_functions_framework.py  cardinal_numbers.py  casson_invariant.py  cech_complex.py  cell_complexes.py  cellular_homology.py  chain_homotopy.py  chaos_profiles.py  chapter_07_09_first_insertion_pass.py  chapter_07_15_active_queue_implementation_closure_checkpoint.py  chapter_07_15_active_queue_implementation_final_handoff_audit.py  chapter_07_15_active_queue_implementation_second_regression_gate.py  chapter_07_15_api_matrix.py  chapter_07_15_coverage_audit.py  chapter_07_15_cross_chapter_quality_gate.py  chapter_07_15_final_handoff_audit.py  chapter_07_15_first_active_queue_implementation_pass.py  chapter_07_15_insertion_queue.py  chapter_07_15_maintenance_closure_signoff_packet.py  chapter_07_15_maintenance_documentation_closure_checkpoint.py  chapter_07_15_maintenance_remediation_queue_stabilization.py  chapter_07_15_maintenance_triage_regression_sweep.py  chapter_07_15_next_cycle_implementation_closure_checkpoint.py  (+217 more)
tests/: conftest.py  test_changelog_guard.py  test_examples_bank.py
tests/core/: test_abstract_homotopy.py  test_advanced_compactifications_extended_v051.py  test_alexandroff.py  (+338 more)
(+1000 files in other folders)
