[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytop"
version = "1.4.0"
description = "Mathematical topology library: degree theory, embeddings, graphs, knots, surfaces, 3-manifolds, cosmology."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Kadirhan Polat", email = "kadirhanpolat@gmail.com"}]
keywords = ["topology", "mathematics", "knot-theory", "manifolds", "graph-topology", "degree-theory", "point-set-topology"]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]
# Independent oracles for the differential test suite (tests/core/test_external_oracles.py).
# Test-only — pytop's runtime stays dependency-free; the tests skip when these are absent.
oracles = ["numpy>=1.26", "sympy>=1.12", "networkx>=3.0", "gudhi>=3.9", "python-flint>=0.6"]
# Optional accelerated EXACT backend: when python-flint is installed, the integer Smith
# normal form (and every homology / Khovanov / surgery engine built on it) routes large
# dense matrices to FLINT — identical results, far faster (the pure-Python core stays the
# default and the only hard requirement).
fast = ["python-flint>=0.6"]
# Optional GPU-accelerated Twist+Clearing reduction via cupy.
# Install the CUDA variant matching your driver, e.g.:
#   pip install 'pytop[gpu]'   # cupy-cuda12x is listed as a dependency hint
# When cupy is absent the GPU backend falls back silently to pure-Python.
gpu = ["cupy-cuda12x"]

[project.urls]
Repository = "https://github.com/kadirhanpolat/pytop"
"Bug Tracker" = "https://github.com/kadirhanpolat/pytop/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"pytop.experimental" = ["_pi_base_data.json"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytop*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/pytop/_internal", "examples_bank"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — formatter handles this
    "E701",   # multiple statements on one line (colon) — common in math helpers
    "E702",   # multiple statements on one line (semicolon) — common in math helpers
    "UP007",  # X | Y union — keep explicit Optional for docstring clarity
    "UP045",  # Optional[X] → X | None — consistent with UP007 exception
]

[tool.ruff.lint.per-file-ignores]
"src/pytop/__init__.py" = ["F401", "I001"]  # re-exports are intentional
"src/pytop/experimental/*.py" = ["F401"]    # re-exports are intentional
"tests/*" = ["F811"]  # fixture redefinition is fine

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:preservation_table_lookup is deprecated:DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
exclude = ["src/pytop/_internal", "examples_bank", "tests"]

[tool.coverage.run]
source = ["pytop"]
omit = ["*/tests/*", "*/__pycache__/*", "*/pytop/_internal/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
